<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RLParkSearchMain">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/imgBackground"
               android:background="@drawable/background_alpha"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="80px" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/RLTopBar">
        <ImageView
                android:layout_width="100px"
                android:layout_height="60px"
                android:id="@+id/imgLogoMark" android:background="@drawable/logo_small"
                android:layout_marginLeft="100px" android:layout_centerVertical="true"/>
        <TextView
                android:layout_width="200px"
                android:layout_height="fill_parent"
                android:text="@string/logo_title"
                android:id="@+id/lblLogo" android:layout_alignParentTop="true" android:layout_alignParentLeft="false"
                android:gravity="center_vertical"
                android:textColor="#FFFFFF" android:textSize="32px" android:layout_toRightOf="@+id/imgLogoMark"/>
    </RelativeLayout>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="80px"
            android:text="@string/search_title"
            android:id="@+id/lblTitle" android:layout_below="@+id/RLTopBar"
            android:layout_alignParentLeft="true" android:layout_marginLeft="30px" android:layout_marginRight="30px"
            android:gravity="center_vertical" android:textSize="40px" android:textColor="#FFFFFF"
            android:layout_marginTop="20px"/>
    <EditText android:layout_width="420px" android:layout_height="40px" android:id="@+id/ednSearch"
              android:layout_below="@+id/lblTitle" android:layout_marginTop="20px"
              android:background="@drawable/edit_background" android:layout_marginLeft="5px"
              android:hint="@string/search_hint" android:textColor="#FFFFFF" android:textSize="24px"
              android:textColorHint="#AAAAAA" android:paddingLeft="20px" android:singleLine="true"
              android:paddingRight="20px"/>
    <Button android:layout_width="30px" android:layout_height="30px" android:id="@+id/btnSearch"
            android:layout_alignTop="@+id/ednSearch"
            android:layout_toRightOf="@+id/ednSearch" android:layout_alignParentRight="false"
            android:background="@drawable/search" android:layout_marginTop="5px"/>
    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listViewParks" android:layout_below="@+id/ednSearch"
            android:layout_above="@+id/RLBottomBar" android:layout_marginTop="20px" android:layout_marginBottom="10px"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="60px" android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/RLBottomBar" android:background="#00FFFF">
        <TextView
                android:layout_width="120px"
                android:layout_height="fill_parent"
                android:text="@string/mypark_title"
                android:id="@+id/lblMyParks" android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false" android:gravity="center" android:textColor="#FFFFFF"
                android:textSize="20px" android:background="#000000"
                android:layout_marginBottom="1px" android:layout_alignParentTop="true"/>
        <TextView android:layout_width="120px" android:layout_height="fill_parent" android:text="@string/news_title"
                  android:id="@+id/lblEpicDirt"
                  android:gravity="center" android:textColor="#FFFFFF"
                  android:textSize="18px" android:layout_alignParentLeft="false"
                  android:layout_toRightOf="@id/lblMyParks" android:layout_marginBottom="1px"
                  android:background="#000000" android:layout_alignParentTop="true"/>
        <TextView android:layout_width="120px" android:layout_height="fill_parent" android:text="@string/search_title"
                  android:id="@+id/lblSearch" android:gravity="center" android:textColor="#FFFFFF"
                  android:layout_centerVertical="true" android:layout_alignParentLeft="false"
                  android:layout_toRightOf="@id/lblEpicDirt" android:textSize="18px" android:layout_marginBottom="3px"
                  android:background="#000000" android:textStyle="bold" android:layout_alignParentTop="true"/>
        <TextView android:layout_width="120px" android:layout_height="fill_parent" android:text="@string/settings_title"
                  android:id="@+id/lblSettings" android:gravity="center" android:textColor="#FFFFFF"
                  android:textSize="18px" android:layout_centerVertical="true" android:layout_alignParentLeft="false"
                  android:layout_toRightOf="@id/lblSearch" android:layout_marginBottom="1px"
                  android:background="#000000" android:layout_alignParentTop="true"/>
    </RelativeLayout>
</RelativeLayout>